@@ -1,7 +1,15 @@
 New Windows Games:
 * Crusader Kings II
 * Endless Space
+* Europa Universalis III
+* Heroes of Might and Magic VI
 * Katawa Shoujo
+* Major League Baseball 2K9
+* Major League Baseball 2K10
+* Major League Baseball 2K11
+* Minecraft
+* NBA 2K11
+* Tropico 4
 Updated Windows Games:
 * Gemini Rue - Added GoG info
 * Uplink - Added GoG info
